@@ -1,6 +1,6 @@
 Package: MKinfer
 Version: 1.4
-Date: 2025-12-16
+Date: 2026-01-01
 Title: Inferential Statistics
 Authors@R: person("Matthias", "Kohl", role = c("aut", "cre"),
                   email = "Matthias.Kohl@stamats.de", 
@@ -8,11 +8,11 @@ Authors@R: person("Matthias", "Kohl", role = c("aut", "cre"),
 Author: Matthias Kohl [aut, cre] (0000-0001-9514-8910)
 Maintainer: Matthias Kohl <Matthias.Kohl@stamats.de>
 Depends: R(>= 4.0.0)
-Imports: stats, rlang, MKdescr, boot, arrangements, nlme, ggplot2, exactRankTests, miceadds
+Imports: stats, rlang, MKdescr, boot, arrangements, nlme, ggplot2, exactRankTests, miceadds, hypergeo
 Suggests: knitr, rmarkdown, Amelia, mice, mvtnorm
 LazyData: yes
 VignetteBuilder: knitr
-Description: Computation of various confidence intervals (Altman et al. (2000), ISBN:978-0-727-91375-3; Hedderich and Sachs (2018), ISBN:978-3-662-56657-2) including bootstrapped versions (Davison and Hinkley (1997), ISBN:978-0-511-80284-3) as well as Hsu (Hedderich and Sachs (2018), ISBN:978-3-662-56657-2), permutation (Janssen (1997), <doi:10.1016/S0167-7152(97)00043-6>), bootstrap (Davison and Hinkley (1997), ISBN:978-0-511-80284-3), intersection-union (Sozu et al. (2015), ISBN:978-3-319-22005-5) and multiple imputation (Barnard and Rubin (1999), <doi:10.1093/biomet/86.4.948>) t-test; furthermore, computation of intersection-union z-test as well as multiple imputation Wilcoxon tests. Graphical visualizations: volcano plot, Bland-Altman plots (Bland and Altman (1986), <doi:10.1016/S0140-6736(86)90837-8>; Shieh (2018), <doi:10.1186/s12874-018-0505-y>), mean difference plot (Boehning et al. (2008), <doi:10.1177/0962280207081867>), plot of test statistic for permutation and bootstrap tests as well as objects of class htest.
+Description: Computation of various confidence intervals (Altman et al. (2000), ISBN:978-0-727-91375-3; Hedderich and Sachs (2018), ISBN:978-3-662-56657-2) including bootstrapped versions (Davison and Hinkley (1997), ISBN:978-0-511-80284-3) as well as Xiao (Xiao (2018), <doi:10.17654/TS054010021>), Hsu (Hedderich and Sachs (2018), ISBN:978-3-662-56657-2), permutation (Janssen (1997), <doi:10.1016/S0167-7152(97)00043-6>), bootstrap (Davison and Hinkley (1997), ISBN:978-0-511-80284-3), intersection-union (Sozu et al. (2015), ISBN:978-3-319-22005-5) and multiple imputation (Barnard and Rubin (1999), <doi:10.1093/biomet/86.4.948>) t-test; furthermore, computation of intersection-union z-test as well as multiple imputation Wilcoxon tests. Graphical visualizations: volcano plot, Bland-Altman plots (Bland and Altman (1986), <doi:10.1016/S0140-6736(86)90837-8>; Shieh (2018), <doi:10.1186/s12874-018-0505-y>), mean difference plot (Boehning et al. (2008), <doi:10.1177/0962280207081867>), plot of test statistic for permutation and bootstrap tests as well as objects of class htest.
 License: LGPL-3
 URL: https://github.com/stamats/MKinfer
 
