@@ -93,6 +93,30 @@ h0plot.htest <- function(x, sig.level = 0.05, hist.alpha = 0.2,
     MAX <- max(abs(x$statistic), qt(1-qtail, df = x$parameter))
     xlim <- c(MIN, MAX)
   }
+  if(names(x$statistic) == "gt"){
+    dfun <- function(x){ }
+    body(dfun) <- substitute({ dgt(x, n1, n2, sd1, sd2) },
+                             list(n1 = x$n[1], n2 = x$n[2], 
+                                  sd1 = x$estimate[3], 
+                                  sd2 = x$estimate[4]))
+    if(x$alternative == "two.sided"){
+      cval <- c(qgt(p = sig.level/2, n1 = x$n[1], n2 = x$n[2], 
+                    sd1 = x$estimate[3], sd2 = x$estimate[4]), 
+                qgt(p = 1-sig.level/2, n1 = x$n[1], n2 = x$n[2], 
+                    sd1 = x$estimate[3], sd2 = x$estimate[4]))
+    }else if(x$alternative == "less"){
+      cval <- qgt(p = sig.level, n1 = x$n[1], n2 = x$n[2], 
+                  sd1 = x$estimate[3], sd2 = x$estimate[4])
+    }else{
+      cval <- qgt(p = 1-sig.level, n1 = x$n[1], n2 = x$n[2], 
+                  sd1 = x$estimate[3], sd2 = x$estimate[4])
+    }
+    MIN <- min(-abs(x$statistic), qgt(qtail, n1 = x$n[1], n2 = x$n[2], 
+                                      sd1 = x$estimate[3], sd2 = x$estimate[4]))
+    MAX <- max(abs(x$statistic), qgt(1-qtail, n1 = x$n[1], n2 = x$n[2], 
+                                     sd1 = x$estimate[3], sd2 = x$estimate[4]))
+    xlim <- c(MIN, MAX)
+  }
   if(names(x$statistic) == "F"){
     dfun <- function(x){ }
     body(dfun) <- substitute({ df(x, df1 = para1, df2 = para2) },
@@ -137,7 +161,7 @@ h0plot.htest <- function(x, sig.level = 0.05, hist.alpha = 0.2,
     MAX <- max(abs(x$statistic), qchisq(1-qtail, df = x$parameter))
     xlim <- c(MIN, MAX)
   }
-  if(!names(x$statistic) %in% c("t", "F", "X-squared")){
+  if(!names(x$statistic) %in% c("t", "gt", "F", "X-squared")){
     stop("Not yet implemented!")
   }
   gg <- ggplot(data = data.frame(x = xlim), aes(x)) +
