@@ -186,6 +186,16 @@ journal = {SORT}
     pages = {67-73},
     year = {1999},
     issn = {2472-5552},
-doi = {https://doi.org/10.1177/108705719900400206}
+    doi = {10.1177/108705719900400206}
+}
+@article{Xiao2018,
+    author = {Yongshun Xiao},
+    title = {On the Solution of a Generalized Behrens-Fisher Problem},
+    journal = {Far East Journal of Theoretical Statistics},
+    volume = {54},
+    number = {1},
+    pages = {21-140},
+    year = {2018},
+    doi = {10.17654/TS054010021}
 }
 
